初步实现了aop功能，实现模块的可插拔性

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>wgluka_core</module>
         <module>wgluka_sample</module>
+        <module>wgluka_aop</module>
     </modules>
 
     <repositories>
