--- a/wgluka_aop/pom.xml
+++ b/wgluka_aop/pom.xml
@@ -9,19 +9,22 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>com.wgluka.framework.sample</artifactId>
+    <artifactId>com.wgluka.framework.aop</artifactId>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/cglib/cglib -->
         <dependency>
-            <groupId>com.wgluka.framework</groupId>
-            <artifactId>com.wgluka.framework.core</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>3.2.5</version>
         </dependency>
+
         <dependency>
+            <artifactId>com.wgluka.framework.core</artifactId>
             <groupId>com.wgluka.framework</groupId>
-            <artifactId>com.wgluka.framework.aop</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
+
 
 </project>
